z-index fix for events calendar

--- a/src/assets/scss/modules/_navigation.scss
+++ b/src/assets/scss/modules/_navigation.scss
@@ -219,6 +219,9 @@
         }
       }
     }
+    &.menu.vertical.submenu.is-dropdown-submenu.first-sub {
+      z-index: 2;
+    }
   }
   h1 {
     @include breakpoint(medium) {
